tests/baselines/reference/iterableArrayPattern10.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern10.ts(16,14): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/iterableArrayPattern10.ts(17,5): error TS2345: Argument of type 'FooIterator' is not assignable to parameter of type '[任意, 任意]'.
  Property '0' is missing in type 'FooIterator'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern10.ts (2 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    function fun([a, b]) { }
                 ~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    fun(new FooIterator);
        ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'FooIterator' is not assignable to parameter of type '[任意, 任意]'.
!!! error TS2345:   Property '0' is missing in type 'FooIterator'.